                                 Muldis::D
                                  Changes
---------------------------------------------------------------------------

2010-05-xx

    * Muldis::D version 0.129.2 is released on CPAN as
    Muldis-D-0.129.2.tar.gz.

    * (SeeAlso.pod)  Updated a few external reference urls.

2010-05-17

    * Muldis::D version 0.129.1 is released on CPAN as
    Muldis-D-0.129.1.tar.gz.

    * (D.pm, README, Makefile.PL)  Updated any instances of
    "http://mm.DarrenDuncan.net/mailman/listinfo" so that they are fully
    lower-cased, because the mixed case version doesn't work with some web
    browsers; browsers that don't automatically convert it to lowercase get
    a "There currently are no publically-advertised mailman lists" message.

    * Purged this distribution's "Changes" file of practically all change
    details for its approximately 147 releases numbered 0.0.0 thru 0.129.0,
    most of those now just constituting a single bullet-point in total.  If
    you want to see those change descriptions, look either in the version
    control system as of tag "release-0.129.0" or in the archived
    distribution tarball named Muldis-D-0.129.0.tar.gz.

    * This is the Muldis-D-0.129.1 file manifest:

        Changes
        INSTALL
        lib/Muldis/D.pm
        lib/Muldis/D/Basics.pod
        lib/Muldis/D/Conventions.pod
        lib/Muldis/D/Core.pod
        lib/Muldis/D/Core/Array.pod
        lib/Muldis/D/Core/Bag.pod
        lib/Muldis/D/Core/Blob.pod
        lib/Muldis/D/Core/Boolean.pod
        lib/Muldis/D/Core/Cast.pod
        lib/Muldis/D/Core/Integer.pod
        lib/Muldis/D/Core/Interval.pod
        lib/Muldis/D/Core/Numeric.pod
        lib/Muldis/D/Core/Ordered.pod
        lib/Muldis/D/Core/Rational.pod
        lib/Muldis/D/Core/Relation.pod
        lib/Muldis/D/Core/Routines_Catalog.pod
        lib/Muldis/D/Core/Scalar.pod
        lib/Muldis/D/Core/Set.pod
        lib/Muldis/D/Core/STDIO.pod