@@ -99,12 +99,13 @@ to the libdwg 1.0, first released on 2000 July 23.
 
 SUPPORT
 
-Several public email-based forums exist whose main topic is all
-implementations of the Muldis D language, especially the Muldis Rosetta
-reference implementation, but also the Set::Relation module.  They exist so
-that Muldis D / Muldis Rosetta users can help each other, or that help
-coming from Muldis D / Muldis Rosetta developers can be said once to many
-people, rather than to each individually.  All of these you can reach via
+Several public email-based forums exist whose main topic is
+the Muldis D language and its implementations, especially
+the Muldis Rosetta reference implementation, but also
+the Set::Relation module.  They exist so that users of Muldis D or
+Muldis Rosetta can help each other, or so that help coming from the
+projects' developers can be said once to many people, rather than
+necessarily to each individually.  All of these you can reach via
 "http://mm.darrenduncan.net/mailman/listinfo".
 
 Alternately, you can purchase more advanced commercial support for various
