@@ -7,6 +7,10 @@
     * Muldis::D version 0.129.2 is released on CPAN as
     Muldis-D-0.129.2.tar.gz.
 
+    * (D.pm, README)  Updated the list of email forums focusing on
+    Muldis D and its implementations, first to add a 4th list
+    muldis-d-language, and second to update all 4 lists' descriptions.
+
     * (SeeAlso.pod)  Updated a few external reference urls.
 
 2010-05-17
